--- a/index.html
+++ b/index.html
@@ -195,22 +195,22 @@
                 <div id="formContact">
                     <form action="https://wp.zybooks.com/form-viewer.php" method="POST" target="_blank">
                         <label for="name">Full Name<span class="required">*</span></label>
-                        <input type="text" id="name" autocomplete="name" required aria-required="true">
+                        <input type="text" id="name" autocomplete="name">
                     
                         <label for="email">Email<span class="required">*</span></label>
-                        <input type="email" id="email" autocomplete="email" required aria-required="true">
+                        <input type="email" id="email" autocomplete="email">
                     
                         <label for="phone">Phone<span class="required">*</span></label>
-                        <input type="tel" id="phone" autocomplete="tel" required aria-required="true">
+                        <input type="tel" id="phone" autocomplete="tel">
 
                         <label for="messages">Message<span class="required">*</span></label>
-                        <textarea id="messages" name="messages" required aria-required="true"></textarea>
+                        <textarea id="messages" name="messages"></textarea>
 
                         <fieldset>
                             <legend>Preferred Contact Method<span class="required">*</span></legend>
-                            <input type="radio" id="pref-phone" name="pref-contact" value="pref-phone" required aria-required="true">
+                            <input type="radio" id="pref-phone" name="pref-contact" value="pref-phone">
                             <label for="pref-phone">Phone</label>
-                            <input type="radio" id="pref-email" name="pref-contact" value="pref-email" required>
+                            <input type="radio" id="pref-email" name="pref-contact" value="pref-email">
                             <label for="pref-email">Email</label>
                         </fieldset>
                         <input type="submit" name="submit" id="submit" value="Submit">
