--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h2 id="mainNavigation">Main Navigation</h2>
             
             <a href="#home"><img src="images/baking-logo.png" alt="A Baking Story logo" class="logo"></a>
-            <a href="#home"><img src="images/baking-logo-br.png" alt="a baking story logo" class="logo-brown"></a>
+           
                 <ul class="mainNav js--mainNav">
                     <li><a href="#features">Our Story</a></li>
                     <li><a href="#howTo">Baking</a></li>
@@ -38,7 +38,7 @@
         </nav>
     </header>
     <main>
-        <section class="js--section-features" id="features">
+        <section id="features">
             <h2>Always Fresh — Baked to Perfection</h2>
             <p>Hello, we're a Baking Story, your bakery on the corner.&nbsp;We know you're always busy. No time for baking. So let us take care of that. Just browse our menu and order away!</p>
                 <section id="days365">
